force-app/main/default/objects/Scholarship_Match__c/Scholarship_Match__c.object-meta.xml
<CustomObject>
    <label>Scholarship Match</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Scholarship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scholarship Match</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>