force-app/main/default/objects/Scholarship_Match__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scholarship Match</relationshipLabel>
    <relationshipName>Scholarship_Match</relationshipName>
    <type>Lookup</type>
</CustomField>