force-app/main/default/objects/Scholarship_Match__c/fields/Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Scholarship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scholarship</label>
    <referenceTo>Scholarship__c</referenceTo>
    <relationshipLabel>Scholarship Match</relationshipLabel>
    <relationshipName>Scholarship_Match</relationshipName>
    <type>Lookup</type>
</CustomField>